// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly 1`] = `
<div
  className="uui-vertical-direction root container"
>
  <div
    className="container root size-18 checkbox-color-blue -clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-checkbox"
    />
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </div>
  <div
    className="container root size-18 checkbox-color-blue -clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-checkbox"
    />
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </div>
</div>
`;

exports[`CheckboxGroup should be rendered correctly with props 1`] = `
<div
  className="uui-horizontal-direction root container"
>
  <div
    className="container root size-18 checkbox-color-blue uui-disabled"
    onKeyDown={[Function]}
  >
    <div
      className="uui-checkbox"
    />
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </div>
  <div
    className="container root size-18 checkbox-color-blue uui-disabled"
    onKeyDown={[Function]}
  >
    <div
      className="uui-checkbox"
    />
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </div>
</div>
`;
